[package]
name = "fftanalyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29"
cpal = "0.15"
ringbuf = "0.3"
log = "0.4"
env_logger = "0.10"

num-complex = "0.4"
num-traits = "0.2"
lazy_static = "1.4"
parking_lot = "0.12"
fftw = { version = "0.8", optional = true }

[features]
default = []
use_fftw = ["fftw"]
